--- a/.github/workflows/init.yaml
+++ b/.github/workflows/init.yaml
@@ -1,12 +1,32 @@
-# This is a placeholder so actions won't default to a getting started page
+name: Deploy my Lambda Function
 
-name: Placeholder
+  #  trigger on all push events to main branch
+on: 
+push:
+  branches:
+    - main
 
-on: push
-
-jobs:
-  init:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Run a one-line script
-        run: echo Hello, world!
+  jobs:
+    build:
+      runs-on: ubuntu-latest
+      steps:
+        - name: Check out code
+          uses: actions/checkout@v2
+        - name: Set up Python
+          uses: actions/setup-python@v2
+          with:
+            python-version: 3.8
+        - name: Install libraries
+          run: |
+            cd function
+            python -m pip install --upgrade pip
+            if [ -f requirements.txt ]; then pip install -r requirements.txt -t .; fi
+        - name: Create zip bundle
+          run: |
+            cd function
+            zip -r ../${{ github.sha }}.zip .
+        - name: Archive artifact
+          uses: actions/upload-artifact@v2
+          with:
+            name: zipped-bundle
+            path: ${{ github.sha }}.zip
