--- a/.github/workflows/init.yaml
+++ b/.github/workflows/init.yaml
@@ -1,9 +1,10 @@
 name: Deploy my Lambda Function
 
   #  trigger on all push events to main branch
-on: push
-branches:
-  - main
+on: 
+  push:
+    branches:
+      - main
 
 jobs:
   build:
