--- a/.github/workflows/deploy-pipeline.yaml
+++ b/.github/workflows/deploy-pipeline.yaml
@@ -45,6 +45,7 @@ jobs:
           path: ${{ github.sha }}.zip
 
   publish:
+    needs: build
     runs-on: ubuntu-latest
     steps:
       - name: create release
