--- a/.github/workflows/deploy-pipeline.yaml
+++ b/.github/workflows/deploy-pipeline.yaml
@@ -37,7 +37,7 @@ jobs:
       - name: Zip bundle
         run: |
           cd function
-          zip -r ../${{ github.sha }}.zip
+          zip -r ../${{ github.sha }}.zip .
       - name: Archive artifact
         uses: actions/upload-artifact@v2
         with:
