--- a/.github/workflows/deploy-pipeline.yaml
+++ b/.github/workflows/deploy-pipeline.yaml
@@ -102,7 +102,7 @@ jobs:
           aws-region: us-east-1
       - name: Create test function
         run: |
-          account_id=$(aws --profile acloudguru --region us-east-1 sts get-caller-identity --query Account --output text)
+          account_id=$(aws sts get-caller-identity --query Account --output text)
           aws lambda create-function --function-name ${{ github.sha }} \
             --code S3Bucket=my-github-bucket-12341234,S3Key=${{ github.sha }}.zip \
             --handler lambda_function.lambda_handler --runtime python3.8 \
