--- a/.github/workflows/deploy-pipeline.yaml
+++ b/.github/workflows/deploy-pipeline.yaml
@@ -110,6 +110,8 @@ jobs:
             --code S3Bucket=my-github-bucket-12341234,S3Key=${{ github.sha }}.zip \
             --handler lambda_function.lambda_handler --runtime python3.8 \
             --role arn:aws:iam::$account_id:role/my-lambda-role
+      - name: Wait 30 seconds
+        run: sleep 30
       - name: Invoke function
         run: |
           aws lambda invoke --function-name ${{ github.sha }}-${{ matrix.input }} \
