--- a/.github/workflows/deploy-pipeline.yaml
+++ b/.github/workflows/deploy-pipeline.yaml
@@ -155,3 +155,22 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           CONFIG_FILE: mkdocs.yaml
+
+  docs2:
+    runs-on: ubuntu-latest
+    needs: deploy
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
+      - name: create doc dir
+        runs: mkdir docs2
+      - name: convert md to html
+        uses: docker://pandoc/core:2.9
+        with:
+          args: userguide.md -t html -o docs/index.html
+      - name: deploy to site
+        uses: JamesIves/github-pages-deploy-action@v4.1.4
+        with:
+          folder: docs2
+          branch: gh-pages2
+
